reference/5.1/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: .NET framework 클래스에 사용할 수 있는 형식 액셀러레이터에 대해 설명 합니다.
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 21093f3a649212526c3fc3eb5405e2a7ce6e49f3
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 10/13/2020
ms.locfileid: "93222465"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="bdf51-104">형식 액셀러레이터 정보</span><span class="sxs-lookup"><span data-stu-id="bdf51-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="bdf51-105">SHORT 설명을</span><span class="sxs-lookup"><span data-stu-id="bdf51-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="bdf51-106">.NET framework 클래스에 사용할 수 있는 형식 액셀러레이터에 대해 설명 합니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="bdf51-107">자세한 설명</span><span class="sxs-lookup"><span data-stu-id="bdf51-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="bdf51-108">형식 액셀러레이터는 .NET framework 클래스의 별칭입니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="bdf51-109">이를 통해 전체 클래스 이름을 명시적으로 입력 하지 않고도 특정 .NET framework 클래스에 액세스할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="bdf51-110">예를 들어, **AliasAttribute** 클래스를에서로 줄일 수 있습니다 `[System.Management.Automation.AliasAttribute]` `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="bdf51-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="bdf51-111">모든 형식 액셀러레이터는 여전히 대괄호 ()로 묶어야 `[]` 합니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="bdf51-112">사용 가능한 형식 액셀러레이터</span><span class="sxs-lookup"><span data-stu-id="bdf51-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="bdf51-113">액셀러레이터</span><span class="sxs-lookup"><span data-stu-id="bdf51-113">Accelerator</span></span>          |                           <span data-ttu-id="bdf51-114">전체 클래스 이름</span><span class="sxs-lookup"><span data-stu-id="bdf51-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="bdf51-115">바인딩하려면</span><span class="sxs-lookup"><span data-stu-id="bdf51-115">adsi</span></span>                         | <span data-ttu-id="bdf51-116">DirectoryServices</span><span class="sxs-lookup"><span data-stu-id="bdf51-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="bdf51-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="bdf51-117">adsisearcher</span></span>                 | <span data-ttu-id="bdf51-118">DirectoryServices</span><span class="sxs-lookup"><span data-stu-id="bdf51-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="bdf51-119">Alias</span><span class="sxs-lookup"><span data-stu-id="bdf51-119">Alias</span></span>                        | <span data-ttu-id="bdf51-120">AliasAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="bdf51-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="bdf51-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="bdf51-122">AllowEmptyCollectionAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="bdf51-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="bdf51-123">AllowEmptyString</span></span>             | <span data-ttu-id="bdf51-124">AllowEmptyStringAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="bdf51-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="bdf51-125">AllowNull</span></span>                    | <span data-ttu-id="bdf51-126">System.object. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="bdf51-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="bdf51-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="bdf51-127">ArgumentCompleter</span></span>            | <span data-ttu-id="bdf51-128">ArgumentCompleterAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="bdf51-129">array</span><span class="sxs-lookup"><span data-stu-id="bdf51-129">array</span></span>                        | <span data-ttu-id="bdf51-130">System.Array</span><span class="sxs-lookup"><span data-stu-id="bdf51-130">System.Array</span></span>                                                        |
|<span data-ttu-id="bdf51-131">bigint</span><span class="sxs-lookup"><span data-stu-id="bdf51-131">bigint</span></span>                       | <span data-ttu-id="bdf51-132">BigInteger</span><span class="sxs-lookup"><span data-stu-id="bdf51-132">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="bdf51-133">bool</span><span class="sxs-lookup"><span data-stu-id="bdf51-133">bool</span></span>                         | <span data-ttu-id="bdf51-134">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="bdf51-134">System.Boolean</span></span>                                                      |
|<span data-ttu-id="bdf51-135">byte</span><span class="sxs-lookup"><span data-stu-id="bdf51-135">byte</span></span>                         | <span data-ttu-id="bdf51-136">System.Byte</span><span class="sxs-lookup"><span data-stu-id="bdf51-136">System.Byte</span></span>                                                         |
|<span data-ttu-id="bdf51-137">char</span><span class="sxs-lookup"><span data-stu-id="bdf51-137">char</span></span>                         | <span data-ttu-id="bdf51-138">System.Char</span><span class="sxs-lookup"><span data-stu-id="bdf51-138">System.Char</span></span>                                                         |
|<span data-ttu-id="bdf51-139">cimclass</span><span class="sxs-lookup"><span data-stu-id="bdf51-139">cimclass</span></span>                     | <span data-ttu-id="bdf51-140">CimClass.</span><span class="sxs-lookup"><span data-stu-id="bdf51-140">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="bdf51-141">cimconverter</span><span class="sxs-lookup"><span data-stu-id="bdf51-141">cimconverter</span></span>                 | <span data-ttu-id="bdf51-142">CimConverter.</span><span class="sxs-lookup"><span data-stu-id="bdf51-142">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="bdf51-143">ciminstance 개체로</span><span class="sxs-lookup"><span data-stu-id="bdf51-143">ciminstance</span></span>                  | <span data-ttu-id="bdf51-144">Ciminstance 개체로.</span><span class="sxs-lookup"><span data-stu-id="bdf51-144">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="bdf51-145">CimSession</span><span class="sxs-lookup"><span data-stu-id="bdf51-145">CimSession</span></span>                   | <span data-ttu-id="bdf51-146">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="bdf51-146">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="bdf51-147">cimtype</span><span class="sxs-lookup"><span data-stu-id="bdf51-147">cimtype</span></span>                      | <span data-ttu-id="bdf51-148">CimType.</span><span class="sxs-lookup"><span data-stu-id="bdf51-148">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="bdf51-149">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="bdf51-149">CmdletBinding</span></span>                | <span data-ttu-id="bdf51-150">System.web. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="bdf51-150">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="bdf51-151">cultureinfo</span><span class="sxs-lookup"><span data-stu-id="bdf51-151">cultureinfo</span></span>                  | <span data-ttu-id="bdf51-152">System.object. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="bdf51-152">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="bdf51-153">Datetime</span><span class="sxs-lookup"><span data-stu-id="bdf51-153">datetime</span></span>                     | <span data-ttu-id="bdf51-154">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="bdf51-154">System.DateTime</span></span>                                                     |
|<span data-ttu-id="bdf51-155">decimal</span><span class="sxs-lookup"><span data-stu-id="bdf51-155">decimal</span></span>                      | <span data-ttu-id="bdf51-156">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="bdf51-156">System.Decimal</span></span>                                                      |
|<span data-ttu-id="bdf51-157">double</span><span class="sxs-lookup"><span data-stu-id="bdf51-157">double</span></span>                       | <span data-ttu-id="bdf51-158">System.Double</span><span class="sxs-lookup"><span data-stu-id="bdf51-158">System.Double</span></span>                                                       |
|<span data-ttu-id="bdf51-159">Set-dsclocalconfigurationmanager</span><span class="sxs-lookup"><span data-stu-id="bdf51-159">DscLocalConfigurationManager</span></span> | <span data-ttu-id="bdf51-160">System.object를 관리 합니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-160">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="bdf51-161">DscProperty</span><span class="sxs-lookup"><span data-stu-id="bdf51-161">DscProperty</span></span>                  | <span data-ttu-id="bdf51-162">DscPropertyAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-162">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="bdf51-163">DscResource</span><span class="sxs-lookup"><span data-stu-id="bdf51-163">DscResource</span></span>                  | <span data-ttu-id="bdf51-164">System.object입니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-164">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="bdf51-165">float</span><span class="sxs-lookup"><span data-stu-id="bdf51-165">float</span></span>                        | <span data-ttu-id="bdf51-166">System.Single</span><span class="sxs-lookup"><span data-stu-id="bdf51-166">System.Single</span></span>                                                       |
|<span data-ttu-id="bdf51-167">guid</span><span class="sxs-lookup"><span data-stu-id="bdf51-167">guid</span></span>                         | <span data-ttu-id="bdf51-168">System.Guid</span><span class="sxs-lookup"><span data-stu-id="bdf51-168">System.Guid</span></span>                                                         |
|<span data-ttu-id="bdf51-169">테이블</span><span class="sxs-lookup"><span data-stu-id="bdf51-169">hashtable</span></span>                    | <span data-ttu-id="bdf51-170">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="bdf51-170">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="bdf51-171">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="bdf51-171">initialsessionstate</span></span>          | <span data-ttu-id="bdf51-172">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="bdf51-172">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="bdf51-173">int</span><span class="sxs-lookup"><span data-stu-id="bdf51-173">int</span></span>                          | <span data-ttu-id="bdf51-174">System.Int32</span><span class="sxs-lookup"><span data-stu-id="bdf51-174">System.Int32</span></span>                                                        |
|<span data-ttu-id="bdf51-175">int16</span><span class="sxs-lookup"><span data-stu-id="bdf51-175">int16</span></span>                        | <span data-ttu-id="bdf51-176">System.Int16</span><span class="sxs-lookup"><span data-stu-id="bdf51-176">System.Int16</span></span>                                                        |
|<span data-ttu-id="bdf51-177">int32</span><span class="sxs-lookup"><span data-stu-id="bdf51-177">int32</span></span>                        | <span data-ttu-id="bdf51-178">System.Int32</span><span class="sxs-lookup"><span data-stu-id="bdf51-178">System.Int32</span></span>                                                        |
|<span data-ttu-id="bdf51-179">int64</span><span class="sxs-lookup"><span data-stu-id="bdf51-179">int64</span></span>                        | <span data-ttu-id="bdf51-180">System.Int64</span><span class="sxs-lookup"><span data-stu-id="bdf51-180">System.Int64</span></span>                                                        |
|<span data-ttu-id="bdf51-181">\</span><span class="sxs-lookup"><span data-stu-id="bdf51-181">ipaddress</span></span>                    | <span data-ttu-id="bdf51-182">시스템 .Net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="bdf51-182">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="bdf51-183">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="bdf51-183">IPEndpoint</span></span>                   | <span data-ttu-id="bdf51-184">시스템 .Net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="bdf51-184">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="bdf51-185">long</span><span class="sxs-lookup"><span data-stu-id="bdf51-185">long</span></span>                         | <span data-ttu-id="bdf51-186">System.Int64</span><span class="sxs-lookup"><span data-stu-id="bdf51-186">System.Int64</span></span>                                                        |
|<span data-ttu-id="bdf51-187">mailaddress 특성이 있어야만</span><span class="sxs-lookup"><span data-stu-id="bdf51-187">mailaddress</span></span>                  | <span data-ttu-id="bdf51-188">시스템 .Net. 메일 주소</span><span class="sxs-lookup"><span data-stu-id="bdf51-188">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="bdf51-189">NullString</span><span class="sxs-lookup"><span data-stu-id="bdf51-189">NullString</span></span>                   | <span data-ttu-id="bdf51-190">System.object. NullString</span><span class="sxs-lookup"><span data-stu-id="bdf51-190">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="bdf51-191">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="bdf51-191">ObjectSecurity</span></span>               | <span data-ttu-id="bdf51-192">Accesscontrol-namespace. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="bdf51-192">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="bdf51-193">OutputType</span><span class="sxs-lookup"><span data-stu-id="bdf51-193">OutputType</span></span>                   | <span data-ttu-id="bdf51-194">OutputTypeAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-194">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="bdf51-195">매개 변수</span><span class="sxs-lookup"><span data-stu-id="bdf51-195">Parameter</span></span>                    | <span data-ttu-id="bdf51-196">System.object. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="bdf51-196">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="bdf51-197">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="bdf51-197">PhysicalAddress</span></span>              | <span data-ttu-id="bdf51-198">System.net.networkinformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="bdf51-198">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="bdf51-199">PowerShell</span><span class="sxs-lookup"><span data-stu-id="bdf51-199">powershell</span></span>                   | <span data-ttu-id="bdf51-200">System.object. PowerShell</span><span class="sxs-lookup"><span data-stu-id="bdf51-200">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="bdf51-201">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="bdf51-201">psaliasproperty</span></span>              | <span data-ttu-id="bdf51-202">PSAliasProperty.</span><span class="sxs-lookup"><span data-stu-id="bdf51-202">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="bdf51-203">pscredential</span><span class="sxs-lookup"><span data-stu-id="bdf51-203">pscredential</span></span>                 | <span data-ttu-id="bdf51-204">System.object. PSCredential</span><span class="sxs-lookup"><span data-stu-id="bdf51-204">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="bdf51-205">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="bdf51-205">pscustomobject</span></span>               | <span data-ttu-id="bdf51-206">System.web. PSObject</span><span class="sxs-lookup"><span data-stu-id="bdf51-206">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="bdf51-207">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="bdf51-207">PSDefaultValue</span></span>               | <span data-ttu-id="bdf51-208">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="bdf51-208">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="bdf51-209">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="bdf51-209">pslistmodifier</span></span>               | <span data-ttu-id="bdf51-210">System.object. .Iiilistmodifier</span><span class="sxs-lookup"><span data-stu-id="bdf51-210">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="bdf51-211">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="bdf51-211">psmoduleinfo</span></span>                 | <span data-ttu-id="bdf51-212">System.object..</span><span class="sxs-lookup"><span data-stu-id="bdf51-212">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="bdf51-213">ps참고 속성</span><span class="sxs-lookup"><span data-stu-id="bdf51-213">psnoteproperty</span></span>               | <span data-ttu-id="bdf51-214">System.object 속성입니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-214">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="bdf51-215">psobject</span><span class="sxs-lookup"><span data-stu-id="bdf51-215">psobject</span></span>                     | <span data-ttu-id="bdf51-216">System.web. PSObject</span><span class="sxs-lookup"><span data-stu-id="bdf51-216">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="bdf51-217">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="bdf51-217">psprimitivedictionary</span></span>        | <span data-ttu-id="bdf51-218">PSPrimitiveDictionary.</span><span class="sxs-lookup"><span data-stu-id="bdf51-218">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="bdf51-219">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="bdf51-219">psscriptmethod</span></span>               | <span data-ttu-id="bdf51-220">PSScriptMethod.</span><span class="sxs-lookup"><span data-stu-id="bdf51-220">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="bdf51-221">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="bdf51-221">psscriptproperty</span></span>             | <span data-ttu-id="bdf51-222">System.web. n a m a 속성</span><span class="sxs-lookup"><span data-stu-id="bdf51-222">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="bdf51-223">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="bdf51-223">PSTypeNameAttribute</span></span>          | <span data-ttu-id="bdf51-224">PSTypeNameAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-224">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="bdf51-225">system.management.automation.psvariable</span><span class="sxs-lookup"><span data-stu-id="bdf51-225">psvariable</span></span>                   | <span data-ttu-id="bdf51-226">System.object입니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-226">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="bdf51-227">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="bdf51-227">psvariableproperty</span></span>           | <span data-ttu-id="bdf51-228">PSVariableProperty.</span><span class="sxs-lookup"><span data-stu-id="bdf51-228">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="bdf51-229">ref</span><span class="sxs-lookup"><span data-stu-id="bdf51-229">ref</span></span>                          | <span data-ttu-id="bdf51-230">System.object를 참조 하십시오.</span><span class="sxs-lookup"><span data-stu-id="bdf51-230">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="bdf51-231">regex</span><span class="sxs-lookup"><span data-stu-id="bdf51-231">regex</span></span>                        | <span data-ttu-id="bdf51-232">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="bdf51-232">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="bdf51-233">Runspace</span><span class="sxs-lookup"><span data-stu-id="bdf51-233">runspace</span></span>                     | <span data-ttu-id="bdf51-234">Runspace입니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-234">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="bdf51-235">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="bdf51-235">runspacefactory</span></span>              | <span data-ttu-id="bdf51-236">Runspace. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="bdf51-236">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="bdf51-237">sbyte</span><span class="sxs-lookup"><span data-stu-id="bdf51-237">sbyte</span></span>                        | <span data-ttu-id="bdf51-238">System.SByte</span><span class="sxs-lookup"><span data-stu-id="bdf51-238">System.SByte</span></span>                                                        |
|<span data-ttu-id="bdf51-239">scriptblock</span><span class="sxs-lookup"><span data-stu-id="bdf51-239">scriptblock</span></span>                  | <span data-ttu-id="bdf51-240">System.object.</span><span class="sxs-lookup"><span data-stu-id="bdf51-240">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="bdf51-241">securestring</span><span class="sxs-lookup"><span data-stu-id="bdf51-241">securestring</span></span>                 | <span data-ttu-id="bdf51-242">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="bdf51-242">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="bdf51-243">single</span><span class="sxs-lookup"><span data-stu-id="bdf51-243">single</span></span>                       | <span data-ttu-id="bdf51-244">System.Single</span><span class="sxs-lookup"><span data-stu-id="bdf51-244">System.Single</span></span>                                                       |
|<span data-ttu-id="bdf51-245">문자열</span><span class="sxs-lookup"><span data-stu-id="bdf51-245">string</span></span>                       | <span data-ttu-id="bdf51-246">System.String</span><span class="sxs-lookup"><span data-stu-id="bdf51-246">System.String</span></span>                                                       |
|<span data-ttu-id="bdf51-247">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="bdf51-247">SupportsWildcards</span></span>            | <span data-ttu-id="bdf51-248">SupportsWildcardsAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-248">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="bdf51-249">switch</span><span class="sxs-lookup"><span data-stu-id="bdf51-249">switch</span></span>                       | <span data-ttu-id="bdf51-250">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="bdf51-250">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="bdf51-251">timespan</span><span class="sxs-lookup"><span data-stu-id="bdf51-251">timespan</span></span>                     | <span data-ttu-id="bdf51-252">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="bdf51-252">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="bdf51-253">type</span><span class="sxs-lookup"><span data-stu-id="bdf51-253">type</span></span>                         | <span data-ttu-id="bdf51-254">System.Type</span><span class="sxs-lookup"><span data-stu-id="bdf51-254">System.Type</span></span>                                                         |
|<span data-ttu-id="bdf51-255">uint16</span><span class="sxs-lookup"><span data-stu-id="bdf51-255">uint16</span></span>                       | <span data-ttu-id="bdf51-256">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="bdf51-256">System.UInt16</span></span>                                                       |
|<span data-ttu-id="bdf51-257">uint32</span><span class="sxs-lookup"><span data-stu-id="bdf51-257">uint32</span></span>                       | <span data-ttu-id="bdf51-258">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="bdf51-258">System.UInt32</span></span>                                                       |
|<span data-ttu-id="bdf51-259">uint64</span><span class="sxs-lookup"><span data-stu-id="bdf51-259">uint64</span></span>                       | <span data-ttu-id="bdf51-260">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="bdf51-260">System.UInt64</span></span>                                                       |
|<span data-ttu-id="bdf51-261">uri</span><span class="sxs-lookup"><span data-stu-id="bdf51-261">uri</span></span>                          | <span data-ttu-id="bdf51-262">System.Uri</span><span class="sxs-lookup"><span data-stu-id="bdf51-262">System.Uri</span></span>                                                          |
|<span data-ttu-id="bdf51-263">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="bdf51-263">ValidateCount</span></span>                | <span data-ttu-id="bdf51-264">ValidateCountAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-264">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="bdf51-265">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="bdf51-265">ValidateDrive</span></span>                | <span data-ttu-id="bdf51-266">System.object. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="bdf51-266">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="bdf51-267">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="bdf51-267">ValidateLength</span></span>               | <span data-ttu-id="bdf51-268">ValidateLengthAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-268">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="bdf51-269">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="bdf51-269">ValidateNotNull</span></span>              | <span data-ttu-id="bdf51-270">ValidateNotNullAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-270">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="bdf51-271">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="bdf51-271">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="bdf51-272">ValidateNotNullOrEmptyAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-272">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="bdf51-273">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="bdf51-273">ValidatePattern</span></span>              | <span data-ttu-id="bdf51-274">ValidatePatternAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-274">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="bdf51-275">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="bdf51-275">ValidateRange</span></span>                | <span data-ttu-id="bdf51-276">ValidateRangeAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-276">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="bdf51-277">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="bdf51-277">ValidateScript</span></span>               | <span data-ttu-id="bdf51-278">ValidateScriptAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-278">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="bdf51-279">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="bdf51-279">ValidateSet</span></span>                  | <span data-ttu-id="bdf51-280">ValidateSetAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-280">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="bdf51-281">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="bdf51-281">ValidateTrustedData</span></span>          | <span data-ttu-id="bdf51-282">ValidateTrustedDataAttribute.</span><span class="sxs-lookup"><span data-stu-id="bdf51-282">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="bdf51-283">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="bdf51-283">ValidateUserDrive</span></span>            | <span data-ttu-id="bdf51-284">System.web. Validateuser드라이브 특성</span><span class="sxs-lookup"><span data-stu-id="bdf51-284">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="bdf51-285">버전</span><span class="sxs-lookup"><span data-stu-id="bdf51-285">version</span></span>                      | <span data-ttu-id="bdf51-286">System.Version</span><span class="sxs-lookup"><span data-stu-id="bdf51-286">System.Version</span></span>                                                      |
|<span data-ttu-id="bdf51-287">void</span><span class="sxs-lookup"><span data-stu-id="bdf51-287">void</span></span>                         | <span data-ttu-id="bdf51-288">System.Void</span><span class="sxs-lookup"><span data-stu-id="bdf51-288">System.Void</span></span>                                                         |
|<span data-ttu-id="bdf51-289">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="bdf51-289">WildcardPattern</span></span>              | <span data-ttu-id="bdf51-290">WildcardPattern.</span><span class="sxs-lookup"><span data-stu-id="bdf51-290">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="bdf51-291">wim</span><span class="sxs-lookup"><span data-stu-id="bdf51-291">wmi</span></span>                          | <span data-ttu-id="bdf51-292">System.object 개체</span><span class="sxs-lookup"><span data-stu-id="bdf51-292">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="bdf51-293">wmiclass</span><span class="sxs-lookup"><span data-stu-id="bdf51-293">wmiclass</span></span>                     | <span data-ttu-id="bdf51-294">System.object 클래스</span><span class="sxs-lookup"><span data-stu-id="bdf51-294">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="bdf51-295">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="bdf51-295">wmisearcher</span></span>                  | <span data-ttu-id="bdf51-296">시스템 관리. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="bdf51-296">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="bdf51-297">System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="bdf51-297">X500DistinguishedName</span></span>        | <span data-ttu-id="bdf51-298">System.security.cryptography.x509certificates.x509certificate2. System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="bdf51-298">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="bdf51-299">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="bdf51-299">X509Certificate</span></span>              | <span data-ttu-id="bdf51-300">System.security.cryptography.x509certificates.x509certificate2입니다.</span><span class="sxs-lookup"><span data-stu-id="bdf51-300">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="bdf51-301">Xml</span><span class="sxs-lookup"><span data-stu-id="bdf51-301">xml</span></span>                          | <span data-ttu-id="bdf51-302">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="bdf51-302">System.Xml.XmlDocument</span></span>                                              |
