reference/7.0/Microsoft.PowerShell.Core/About/about_Type_Accelerators.md
---
description: .NET framework 클래스에 사용할 수 있는 형식 액셀러레이터에 대해 설명 합니다.
keywords: powershell,cmdlet
Locale: en-US
ms.date: 05/01/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_type_accelerators?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Type_Accelerators
ms.openlocfilehash: 6f73aa590b64cda5739a2a118b2b4c5a6c103a67
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 10/13/2020
ms.locfileid: "93220962"
---
# <a name="about-type-accelerators"></a><span data-ttu-id="08ec6-104">형식 액셀러레이터 정보</span><span class="sxs-lookup"><span data-stu-id="08ec6-104">About Type Accelerators</span></span>

## <a name="short-desription"></a><span data-ttu-id="08ec6-105">SHORT 설명을</span><span class="sxs-lookup"><span data-stu-id="08ec6-105">SHORT DESRIPTION</span></span>
<span data-ttu-id="08ec6-106">.NET framework 클래스에 사용할 수 있는 형식 액셀러레이터에 대해 설명 합니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-106">Describes the Type accelerators available for .NET framework classes</span></span>

## <a name="long-description"></a><span data-ttu-id="08ec6-107">자세한 설명</span><span class="sxs-lookup"><span data-stu-id="08ec6-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="08ec6-108">형식 액셀러레이터는 .NET framework 클래스의 별칭입니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-108">Type accelerators are aliases for .NET framework classes.</span></span> <span data-ttu-id="08ec6-109">이를 통해 전체 클래스 이름을 명시적으로 입력 하지 않고도 특정 .NET framework 클래스에 액세스할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-109">They allow you to access specific .NET framework classes without having to explicitly type the entire class name.</span></span> <span data-ttu-id="08ec6-110">예를 들어, **AliasAttribute** 클래스를에서로 줄일 수 있습니다 `[System.Management.Automation.AliasAttribute]` `[Alias]` .</span><span class="sxs-lookup"><span data-stu-id="08ec6-110">For example, you can shorten the **AliasAttribute** class from `[System.Management.Automation.AliasAttribute]` to `[Alias]`.</span></span>

> [!NOTE]
> <span data-ttu-id="08ec6-111">모든 형식 액셀러레이터는 여전히 대괄호 ()로 묶어야 `[]` 합니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-111">All type accelerators still need to be wrapped in square brackets(`[]`).</span></span>

## <a name="available-type-accelerators"></a><span data-ttu-id="08ec6-112">사용 가능한 형식 액셀러레이터</span><span class="sxs-lookup"><span data-stu-id="08ec6-112">Available Type Accelerators</span></span>

|        <span data-ttu-id="08ec6-113">액셀러레이터</span><span class="sxs-lookup"><span data-stu-id="08ec6-113">Accelerator</span></span>          |                           <span data-ttu-id="08ec6-114">전체 클래스 이름</span><span class="sxs-lookup"><span data-stu-id="08ec6-114">Full Class Name</span></span>                           |
|---------------------------- | ------------------------------------------------------------------- |
|<span data-ttu-id="08ec6-115">바인딩하려면</span><span class="sxs-lookup"><span data-stu-id="08ec6-115">adsi</span></span>                         | <span data-ttu-id="08ec6-116">DirectoryServices</span><span class="sxs-lookup"><span data-stu-id="08ec6-116">System.DirectoryServices.DirectoryEntry</span></span>                             |
|<span data-ttu-id="08ec6-117">adsisearcher</span><span class="sxs-lookup"><span data-stu-id="08ec6-117">adsisearcher</span></span>                 | <span data-ttu-id="08ec6-118">DirectoryServices</span><span class="sxs-lookup"><span data-stu-id="08ec6-118">System.DirectoryServices.DirectorySearcher</span></span>                          |
|<span data-ttu-id="08ec6-119">Alias</span><span class="sxs-lookup"><span data-stu-id="08ec6-119">Alias</span></span>                        | <span data-ttu-id="08ec6-120">AliasAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-120">System.Management.Automation.AliasAttribute</span></span>                         |
|<span data-ttu-id="08ec6-121">AllowEmptyCollection</span><span class="sxs-lookup"><span data-stu-id="08ec6-121">AllowEmptyCollection</span></span>         | <span data-ttu-id="08ec6-122">AllowEmptyCollectionAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-122">System.Management.Automation.AllowEmptyCollectionAttribute</span></span>          |
|<span data-ttu-id="08ec6-123">AllowEmptyString</span><span class="sxs-lookup"><span data-stu-id="08ec6-123">AllowEmptyString</span></span>             | <span data-ttu-id="08ec6-124">AllowEmptyStringAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-124">System.Management.Automation.AllowEmptyStringAttribute</span></span>              |
|<span data-ttu-id="08ec6-125">AllowNull</span><span class="sxs-lookup"><span data-stu-id="08ec6-125">AllowNull</span></span>                    | <span data-ttu-id="08ec6-126">System.object. AllowNullAttribute</span><span class="sxs-lookup"><span data-stu-id="08ec6-126">System.Management.Automation.AllowNullAttribute</span></span>                     |
|<span data-ttu-id="08ec6-127">ArgumentCompleter</span><span class="sxs-lookup"><span data-stu-id="08ec6-127">ArgumentCompleter</span></span>            | <span data-ttu-id="08ec6-128">ArgumentCompleterAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-128">System.Management.Automation.ArgumentCompleterAttribute</span></span>             |
|<span data-ttu-id="08ec6-129">ArgumentCompletions</span><span class="sxs-lookup"><span data-stu-id="08ec6-129">ArgumentCompletions</span></span>          | <span data-ttu-id="08ec6-130">ArgumentCompletionsAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-130">System.Management.Automation.ArgumentCompletionsAttribute</span></span>           |
|<span data-ttu-id="08ec6-131">array</span><span class="sxs-lookup"><span data-stu-id="08ec6-131">array</span></span>                        | <span data-ttu-id="08ec6-132">System.Array</span><span class="sxs-lookup"><span data-stu-id="08ec6-132">System.Array</span></span>                                                        |
|<span data-ttu-id="08ec6-133">bigint</span><span class="sxs-lookup"><span data-stu-id="08ec6-133">bigint</span></span>                       | <span data-ttu-id="08ec6-134">BigInteger</span><span class="sxs-lookup"><span data-stu-id="08ec6-134">System.Numerics.BigInteger</span></span>                                          |
|<span data-ttu-id="08ec6-135">bool</span><span class="sxs-lookup"><span data-stu-id="08ec6-135">bool</span></span>                         | <span data-ttu-id="08ec6-136">System.Boolean</span><span class="sxs-lookup"><span data-stu-id="08ec6-136">System.Boolean</span></span>                                                      |
|<span data-ttu-id="08ec6-137">byte</span><span class="sxs-lookup"><span data-stu-id="08ec6-137">byte</span></span>                         | <span data-ttu-id="08ec6-138">System.Byte</span><span class="sxs-lookup"><span data-stu-id="08ec6-138">System.Byte</span></span>                                                         |
|<span data-ttu-id="08ec6-139">char</span><span class="sxs-lookup"><span data-stu-id="08ec6-139">char</span></span>                         | <span data-ttu-id="08ec6-140">System.Char</span><span class="sxs-lookup"><span data-stu-id="08ec6-140">System.Char</span></span>                                                         |
|<span data-ttu-id="08ec6-141">cimclass</span><span class="sxs-lookup"><span data-stu-id="08ec6-141">cimclass</span></span>                     | <span data-ttu-id="08ec6-142">CimClass.</span><span class="sxs-lookup"><span data-stu-id="08ec6-142">Microsoft.Management.Infrastructure.CimClass</span></span>                        |
|<span data-ttu-id="08ec6-143">cimconverter</span><span class="sxs-lookup"><span data-stu-id="08ec6-143">cimconverter</span></span>                 | <span data-ttu-id="08ec6-144">CimConverter.</span><span class="sxs-lookup"><span data-stu-id="08ec6-144">Microsoft.Management.Infrastructure.CimConverter</span></span>                    |
|<span data-ttu-id="08ec6-145">ciminstance 개체로</span><span class="sxs-lookup"><span data-stu-id="08ec6-145">ciminstance</span></span>                  | <span data-ttu-id="08ec6-146">Ciminstance 개체로.</span><span class="sxs-lookup"><span data-stu-id="08ec6-146">Microsoft.Management.Infrastructure.CimInstance</span></span>                     |
|<span data-ttu-id="08ec6-147">CimSession</span><span class="sxs-lookup"><span data-stu-id="08ec6-147">CimSession</span></span>                   | <span data-ttu-id="08ec6-148">Microsoft.Management.Infrastructure.CimSession</span><span class="sxs-lookup"><span data-stu-id="08ec6-148">Microsoft.Management.Infrastructure.CimSession</span></span>                      |
|<span data-ttu-id="08ec6-149">cimtype</span><span class="sxs-lookup"><span data-stu-id="08ec6-149">cimtype</span></span>                      | <span data-ttu-id="08ec6-150">CimType.</span><span class="sxs-lookup"><span data-stu-id="08ec6-150">Microsoft.Management.Infrastructure.CimType</span></span>                         |
|<span data-ttu-id="08ec6-151">CmdletBinding</span><span class="sxs-lookup"><span data-stu-id="08ec6-151">CmdletBinding</span></span>                | <span data-ttu-id="08ec6-152">System.web. CmdletBindingAttribute</span><span class="sxs-lookup"><span data-stu-id="08ec6-152">System.Management.Automation.CmdletBindingAttribute</span></span>                 |
|<span data-ttu-id="08ec6-153">cultureinfo</span><span class="sxs-lookup"><span data-stu-id="08ec6-153">cultureinfo</span></span>                  | <span data-ttu-id="08ec6-154">System.object. CultureInfo</span><span class="sxs-lookup"><span data-stu-id="08ec6-154">System.Globalization.CultureInfo</span></span>                                    |
|<span data-ttu-id="08ec6-155">Datetime</span><span class="sxs-lookup"><span data-stu-id="08ec6-155">datetime</span></span>                     | <span data-ttu-id="08ec6-156">System.DateTime</span><span class="sxs-lookup"><span data-stu-id="08ec6-156">System.DateTime</span></span>                                                     |
|<span data-ttu-id="08ec6-157">decimal</span><span class="sxs-lookup"><span data-stu-id="08ec6-157">decimal</span></span>                      | <span data-ttu-id="08ec6-158">System.Decimal</span><span class="sxs-lookup"><span data-stu-id="08ec6-158">System.Decimal</span></span>                                                      |
|<span data-ttu-id="08ec6-159">double</span><span class="sxs-lookup"><span data-stu-id="08ec6-159">double</span></span>                       | <span data-ttu-id="08ec6-160">System.Double</span><span class="sxs-lookup"><span data-stu-id="08ec6-160">System.Double</span></span>                                                       |
|<span data-ttu-id="08ec6-161">Set-dsclocalconfigurationmanager</span><span class="sxs-lookup"><span data-stu-id="08ec6-161">DscLocalConfigurationManager</span></span> | <span data-ttu-id="08ec6-162">System.object를 관리 합니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-162">System.Management.Automation.DscLocalConfigurationManagerAttribute</span></span>  |
|<span data-ttu-id="08ec6-163">DscProperty</span><span class="sxs-lookup"><span data-stu-id="08ec6-163">DscProperty</span></span>                  | <span data-ttu-id="08ec6-164">DscPropertyAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-164">System.Management.Automation.DscPropertyAttribute</span></span>                   |
|<span data-ttu-id="08ec6-165">DscResource</span><span class="sxs-lookup"><span data-stu-id="08ec6-165">DscResource</span></span>                  | <span data-ttu-id="08ec6-166">System.object입니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-166">System.Management.Automation.DscResourceAttribute</span></span>                   |
|<span data-ttu-id="08ec6-167">ExperimentAction</span><span class="sxs-lookup"><span data-stu-id="08ec6-167">ExperimentAction</span></span>             | <span data-ttu-id="08ec6-168">ExperimentAction.</span><span class="sxs-lookup"><span data-stu-id="08ec6-168">System.Management.Automation.ExperimentAction</span></span>                       |
|<span data-ttu-id="08ec6-169">실험적</span><span class="sxs-lookup"><span data-stu-id="08ec6-169">Experimental</span></span>                 | <span data-ttu-id="08ec6-170">ExperimentalAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-170">System.Management.Automation.ExperimentalAttribute</span></span>                  |
|<span data-ttu-id="08ec6-171">ExperimentalFeature</span><span class="sxs-lookup"><span data-stu-id="08ec6-171">ExperimentalFeature</span></span>          | <span data-ttu-id="08ec6-172">ExperimentalFeature.</span><span class="sxs-lookup"><span data-stu-id="08ec6-172">System.Management.Automation.ExperimentalFeature</span></span>                    |
|<span data-ttu-id="08ec6-173">float</span><span class="sxs-lookup"><span data-stu-id="08ec6-173">float</span></span>                        | <span data-ttu-id="08ec6-174">System.Single</span><span class="sxs-lookup"><span data-stu-id="08ec6-174">System.Single</span></span>                                                       |
|<span data-ttu-id="08ec6-175">guid</span><span class="sxs-lookup"><span data-stu-id="08ec6-175">guid</span></span>                         | <span data-ttu-id="08ec6-176">System.Guid</span><span class="sxs-lookup"><span data-stu-id="08ec6-176">System.Guid</span></span>                                                         |
|<span data-ttu-id="08ec6-177">테이블</span><span class="sxs-lookup"><span data-stu-id="08ec6-177">hashtable</span></span>                    | <span data-ttu-id="08ec6-178">System.Collections.Hashtable</span><span class="sxs-lookup"><span data-stu-id="08ec6-178">System.Collections.Hashtable</span></span>                                        |
|<span data-ttu-id="08ec6-179">initialsessionstate</span><span class="sxs-lookup"><span data-stu-id="08ec6-179">initialsessionstate</span></span>          | <span data-ttu-id="08ec6-180">System.Management.Automation.Runspaces.InitialSessionState</span><span class="sxs-lookup"><span data-stu-id="08ec6-180">System.Management.Automation.Runspaces.InitialSessionState</span></span>          |
|<span data-ttu-id="08ec6-181">int</span><span class="sxs-lookup"><span data-stu-id="08ec6-181">int</span></span>                          | <span data-ttu-id="08ec6-182">System.Int32</span><span class="sxs-lookup"><span data-stu-id="08ec6-182">System.Int32</span></span>                                                        |
|<span data-ttu-id="08ec6-183">int16</span><span class="sxs-lookup"><span data-stu-id="08ec6-183">int16</span></span>                        | <span data-ttu-id="08ec6-184">System.Int16</span><span class="sxs-lookup"><span data-stu-id="08ec6-184">System.Int16</span></span>                                                        |
|<span data-ttu-id="08ec6-185">int32</span><span class="sxs-lookup"><span data-stu-id="08ec6-185">int32</span></span>                        | <span data-ttu-id="08ec6-186">System.Int32</span><span class="sxs-lookup"><span data-stu-id="08ec6-186">System.Int32</span></span>                                                        |
|<span data-ttu-id="08ec6-187">int64</span><span class="sxs-lookup"><span data-stu-id="08ec6-187">int64</span></span>                        | <span data-ttu-id="08ec6-188">System.Int64</span><span class="sxs-lookup"><span data-stu-id="08ec6-188">System.Int64</span></span>                                                        |
|<span data-ttu-id="08ec6-189">\</span><span class="sxs-lookup"><span data-stu-id="08ec6-189">ipaddress</span></span>                    | <span data-ttu-id="08ec6-190">시스템 .Net. IPAddress</span><span class="sxs-lookup"><span data-stu-id="08ec6-190">System.Net.IPAddress</span></span>                                                |
|<span data-ttu-id="08ec6-191">IPEndpoint</span><span class="sxs-lookup"><span data-stu-id="08ec6-191">IPEndpoint</span></span>                   | <span data-ttu-id="08ec6-192">시스템 .Net. IPEndPoint</span><span class="sxs-lookup"><span data-stu-id="08ec6-192">System.Net.IPEndPoint</span></span>                                               |
|<span data-ttu-id="08ec6-193">long</span><span class="sxs-lookup"><span data-stu-id="08ec6-193">long</span></span>                         | <span data-ttu-id="08ec6-194">System.Int64</span><span class="sxs-lookup"><span data-stu-id="08ec6-194">System.Int64</span></span>                                                        |
|<span data-ttu-id="08ec6-195">mailaddress 특성이 있어야만</span><span class="sxs-lookup"><span data-stu-id="08ec6-195">mailaddress</span></span>                  | <span data-ttu-id="08ec6-196">시스템 .Net. 메일 주소</span><span class="sxs-lookup"><span data-stu-id="08ec6-196">System.Net.Mail.MailAddress</span></span>                                         |
|<span data-ttu-id="08ec6-197">NullString</span><span class="sxs-lookup"><span data-stu-id="08ec6-197">NullString</span></span>                   | <span data-ttu-id="08ec6-198">System.object. NullString</span><span class="sxs-lookup"><span data-stu-id="08ec6-198">System.Management.Automation.Language.NullString</span></span>                    |
|<span data-ttu-id="08ec6-199">ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="08ec6-199">ObjectSecurity</span></span>               | <span data-ttu-id="08ec6-200">Accesscontrol-namespace. ObjectSecurity</span><span class="sxs-lookup"><span data-stu-id="08ec6-200">System.Security.AccessControl.ObjectSecurity</span></span>                        |
|<span data-ttu-id="08ec6-201">OutputType</span><span class="sxs-lookup"><span data-stu-id="08ec6-201">OutputType</span></span>                   | <span data-ttu-id="08ec6-202">OutputTypeAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-202">System.Management.Automation.OutputTypeAttribute</span></span>                    |
|<span data-ttu-id="08ec6-203">매개 변수</span><span class="sxs-lookup"><span data-stu-id="08ec6-203">Parameter</span></span>                    | <span data-ttu-id="08ec6-204">System.object. ParameterAttribute</span><span class="sxs-lookup"><span data-stu-id="08ec6-204">System.Management.Automation.ParameterAttribute</span></span>                     |
|<span data-ttu-id="08ec6-205">PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="08ec6-205">PhysicalAddress</span></span>              | <span data-ttu-id="08ec6-206">System.net.networkinformation. PhysicalAddress</span><span class="sxs-lookup"><span data-stu-id="08ec6-206">System.Net.NetworkInformation.PhysicalAddress</span></span>                       |
|<span data-ttu-id="08ec6-207">PowerShell</span><span class="sxs-lookup"><span data-stu-id="08ec6-207">powershell</span></span>                   | <span data-ttu-id="08ec6-208">System.object. PowerShell</span><span class="sxs-lookup"><span data-stu-id="08ec6-208">System.Management.Automation.PowerShell</span></span>                             |
|<span data-ttu-id="08ec6-209">psaliasproperty</span><span class="sxs-lookup"><span data-stu-id="08ec6-209">psaliasproperty</span></span>              | <span data-ttu-id="08ec6-210">PSAliasProperty.</span><span class="sxs-lookup"><span data-stu-id="08ec6-210">System.Management.Automation.PSAliasProperty</span></span>                        |
|<span data-ttu-id="08ec6-211">pscredential</span><span class="sxs-lookup"><span data-stu-id="08ec6-211">pscredential</span></span>                 | <span data-ttu-id="08ec6-212">System.object. PSCredential</span><span class="sxs-lookup"><span data-stu-id="08ec6-212">System.Management.Automation.PSCredential</span></span>                           |
|<span data-ttu-id="08ec6-213">pscustomobject</span><span class="sxs-lookup"><span data-stu-id="08ec6-213">pscustomobject</span></span>               | <span data-ttu-id="08ec6-214">System.web. PSObject</span><span class="sxs-lookup"><span data-stu-id="08ec6-214">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="08ec6-215">PSDefaultValue</span><span class="sxs-lookup"><span data-stu-id="08ec6-215">PSDefaultValue</span></span>               | <span data-ttu-id="08ec6-216">System.Management.Automation.PSDefaultValueAttribute</span><span class="sxs-lookup"><span data-stu-id="08ec6-216">System.Management.Automation.PSDefaultValueAttribute</span></span>                |
|<span data-ttu-id="08ec6-217">pslistmodifier</span><span class="sxs-lookup"><span data-stu-id="08ec6-217">pslistmodifier</span></span>               | <span data-ttu-id="08ec6-218">System.object. .Iiilistmodifier</span><span class="sxs-lookup"><span data-stu-id="08ec6-218">System.Management.Automation.PSListModifier</span></span>                         |
|<span data-ttu-id="08ec6-219">psmoduleinfo</span><span class="sxs-lookup"><span data-stu-id="08ec6-219">psmoduleinfo</span></span>                 | <span data-ttu-id="08ec6-220">System.object..</span><span class="sxs-lookup"><span data-stu-id="08ec6-220">System.Management.Automation.PSModuleInfo</span></span>                           |
|<span data-ttu-id="08ec6-221">ps참고 속성</span><span class="sxs-lookup"><span data-stu-id="08ec6-221">psnoteproperty</span></span>               | <span data-ttu-id="08ec6-222">System.object 속성입니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-222">System.Management.Automation.PSNoteProperty</span></span>                         |
|<span data-ttu-id="08ec6-223">psobject</span><span class="sxs-lookup"><span data-stu-id="08ec6-223">psobject</span></span>                     | <span data-ttu-id="08ec6-224">System.web. PSObject</span><span class="sxs-lookup"><span data-stu-id="08ec6-224">System.Management.Automation.PSObject</span></span>                               |
|<span data-ttu-id="08ec6-225">psprimitivedictionary</span><span class="sxs-lookup"><span data-stu-id="08ec6-225">psprimitivedictionary</span></span>        | <span data-ttu-id="08ec6-226">PSPrimitiveDictionary.</span><span class="sxs-lookup"><span data-stu-id="08ec6-226">System.Management.Automation.PSPrimitiveDictionary</span></span>                  |
|<span data-ttu-id="08ec6-227">pspropertyexpression</span><span class="sxs-lookup"><span data-stu-id="08ec6-227">pspropertyexpression</span></span>         | <span data-ttu-id="08ec6-228">Microsoft. PowerShell. PSPropertyExpression</span><span class="sxs-lookup"><span data-stu-id="08ec6-228">Microsoft.PowerShell.Commands.PSPropertyExpression</span></span>                  |
|<span data-ttu-id="08ec6-229">psscriptmethod</span><span class="sxs-lookup"><span data-stu-id="08ec6-229">psscriptmethod</span></span>               | <span data-ttu-id="08ec6-230">PSScriptMethod.</span><span class="sxs-lookup"><span data-stu-id="08ec6-230">System.Management.Automation.PSScriptMethod</span></span>                         |
|<span data-ttu-id="08ec6-231">psscriptproperty</span><span class="sxs-lookup"><span data-stu-id="08ec6-231">psscriptproperty</span></span>             | <span data-ttu-id="08ec6-232">System.web. n a m a 속성</span><span class="sxs-lookup"><span data-stu-id="08ec6-232">System.Management.Automation.PSScriptProperty</span></span>                       |
|<span data-ttu-id="08ec6-233">PSTypeNameAttribute</span><span class="sxs-lookup"><span data-stu-id="08ec6-233">PSTypeNameAttribute</span></span>          | <span data-ttu-id="08ec6-234">PSTypeNameAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-234">System.Management.Automation.PSTypeNameAttribute</span></span>                    |
|<span data-ttu-id="08ec6-235">system.management.automation.psvariable</span><span class="sxs-lookup"><span data-stu-id="08ec6-235">psvariable</span></span>                   | <span data-ttu-id="08ec6-236">System.object입니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-236">System.Management.Automation.PSVariable</span></span>                             |
|<span data-ttu-id="08ec6-237">psvariableproperty</span><span class="sxs-lookup"><span data-stu-id="08ec6-237">psvariableproperty</span></span>           | <span data-ttu-id="08ec6-238">PSVariableProperty.</span><span class="sxs-lookup"><span data-stu-id="08ec6-238">System.Management.Automation.PSVariableProperty</span></span>                     |
|<span data-ttu-id="08ec6-239">ref</span><span class="sxs-lookup"><span data-stu-id="08ec6-239">ref</span></span>                          | <span data-ttu-id="08ec6-240">System.object를 참조 하십시오.</span><span class="sxs-lookup"><span data-stu-id="08ec6-240">System.Management.Automation.PSReference</span></span>                            |
|<span data-ttu-id="08ec6-241">regex</span><span class="sxs-lookup"><span data-stu-id="08ec6-241">regex</span></span>                        | <span data-ttu-id="08ec6-242">System.Text.RegularExpressions.Regex</span><span class="sxs-lookup"><span data-stu-id="08ec6-242">System.Text.RegularExpressions.Regex</span></span>                                |
|<span data-ttu-id="08ec6-243">Runspace</span><span class="sxs-lookup"><span data-stu-id="08ec6-243">runspace</span></span>                     | <span data-ttu-id="08ec6-244">Runspace입니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-244">System.Management.Automation.Runspaces.Runspace</span></span>                     |
|<span data-ttu-id="08ec6-245">runspacefactory</span><span class="sxs-lookup"><span data-stu-id="08ec6-245">runspacefactory</span></span>              | <span data-ttu-id="08ec6-246">Runspace. RunspaceFactory</span><span class="sxs-lookup"><span data-stu-id="08ec6-246">System.Management.Automation.Runspaces.RunspaceFactory</span></span>              |
|<span data-ttu-id="08ec6-247">sbyte</span><span class="sxs-lookup"><span data-stu-id="08ec6-247">sbyte</span></span>                        | <span data-ttu-id="08ec6-248">System.SByte</span><span class="sxs-lookup"><span data-stu-id="08ec6-248">System.SByte</span></span>                                                        |
|<span data-ttu-id="08ec6-249">scriptblock</span><span class="sxs-lookup"><span data-stu-id="08ec6-249">scriptblock</span></span>                  | <span data-ttu-id="08ec6-250">System.object.</span><span class="sxs-lookup"><span data-stu-id="08ec6-250">System.Management.Automation.ScriptBlock</span></span>                            |
|<span data-ttu-id="08ec6-251">securestring</span><span class="sxs-lookup"><span data-stu-id="08ec6-251">securestring</span></span>                 | <span data-ttu-id="08ec6-252">System.Security.SecureString</span><span class="sxs-lookup"><span data-stu-id="08ec6-252">System.Security.SecureString</span></span>                                        |
|<span data-ttu-id="08ec6-253">semver</span><span class="sxs-lookup"><span data-stu-id="08ec6-253">semver</span></span>                       | <span data-ttu-id="08ec6-254">SemanticVersion.</span><span class="sxs-lookup"><span data-stu-id="08ec6-254">System.Management.Automation.SemanticVersion</span></span>                        |
|<span data-ttu-id="08ec6-255">short</span><span class="sxs-lookup"><span data-stu-id="08ec6-255">short</span></span>                        | <span data-ttu-id="08ec6-256">System.Int16</span><span class="sxs-lookup"><span data-stu-id="08ec6-256">System.Int16</span></span>                                                        |
|<span data-ttu-id="08ec6-257">single</span><span class="sxs-lookup"><span data-stu-id="08ec6-257">single</span></span>                       | <span data-ttu-id="08ec6-258">System.Single</span><span class="sxs-lookup"><span data-stu-id="08ec6-258">System.Single</span></span>                                                       |
|<span data-ttu-id="08ec6-259">문자열</span><span class="sxs-lookup"><span data-stu-id="08ec6-259">string</span></span>                       | <span data-ttu-id="08ec6-260">System.String</span><span class="sxs-lookup"><span data-stu-id="08ec6-260">System.String</span></span>                                                       |
|<span data-ttu-id="08ec6-261">SupportsWildcards</span><span class="sxs-lookup"><span data-stu-id="08ec6-261">SupportsWildcards</span></span>            | <span data-ttu-id="08ec6-262">SupportsWildcardsAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-262">System.Management.Automation.SupportsWildcardsAttribute</span></span>             |
|<span data-ttu-id="08ec6-263">switch</span><span class="sxs-lookup"><span data-stu-id="08ec6-263">switch</span></span>                       | <span data-ttu-id="08ec6-264">System.Management.Automation.SwitchParameter</span><span class="sxs-lookup"><span data-stu-id="08ec6-264">System.Management.Automation.SwitchParameter</span></span>                        |
|<span data-ttu-id="08ec6-265">timespan</span><span class="sxs-lookup"><span data-stu-id="08ec6-265">timespan</span></span>                     | <span data-ttu-id="08ec6-266">System.TimeSpan</span><span class="sxs-lookup"><span data-stu-id="08ec6-266">System.TimeSpan</span></span>                                                     |
|<span data-ttu-id="08ec6-267">type</span><span class="sxs-lookup"><span data-stu-id="08ec6-267">type</span></span>                         | <span data-ttu-id="08ec6-268">System.Type</span><span class="sxs-lookup"><span data-stu-id="08ec6-268">System.Type</span></span>                                                         |
|<span data-ttu-id="08ec6-269">uint</span><span class="sxs-lookup"><span data-stu-id="08ec6-269">uint</span></span>                         | <span data-ttu-id="08ec6-270">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="08ec6-270">System.UInt32</span></span>                                                       |
|<span data-ttu-id="08ec6-271">uint16</span><span class="sxs-lookup"><span data-stu-id="08ec6-271">uint16</span></span>                       | <span data-ttu-id="08ec6-272">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="08ec6-272">System.UInt16</span></span>                                                       |
|<span data-ttu-id="08ec6-273">uint32</span><span class="sxs-lookup"><span data-stu-id="08ec6-273">uint32</span></span>                       | <span data-ttu-id="08ec6-274">System.UInt32</span><span class="sxs-lookup"><span data-stu-id="08ec6-274">System.UInt32</span></span>                                                       |
|<span data-ttu-id="08ec6-275">uint64</span><span class="sxs-lookup"><span data-stu-id="08ec6-275">uint64</span></span>                       | <span data-ttu-id="08ec6-276">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="08ec6-276">System.UInt64</span></span>                                                       |
|<span data-ttu-id="08ec6-277">ulong</span><span class="sxs-lookup"><span data-stu-id="08ec6-277">ulong</span></span>                        | <span data-ttu-id="08ec6-278">System.UInt64</span><span class="sxs-lookup"><span data-stu-id="08ec6-278">System.UInt64</span></span>                                                       |
|<span data-ttu-id="08ec6-279">uri</span><span class="sxs-lookup"><span data-stu-id="08ec6-279">uri</span></span>                          | <span data-ttu-id="08ec6-280">System.Uri</span><span class="sxs-lookup"><span data-stu-id="08ec6-280">System.Uri</span></span>                                                          |
|<span data-ttu-id="08ec6-281">ushort</span><span class="sxs-lookup"><span data-stu-id="08ec6-281">ushort</span></span>                       | <span data-ttu-id="08ec6-282">System.UInt16</span><span class="sxs-lookup"><span data-stu-id="08ec6-282">System.UInt16</span></span>                                                       |
|<span data-ttu-id="08ec6-283">ValidateCount</span><span class="sxs-lookup"><span data-stu-id="08ec6-283">ValidateCount</span></span>                | <span data-ttu-id="08ec6-284">ValidateCountAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-284">System.Management.Automation.ValidateCountAttribute</span></span>                 |
|<span data-ttu-id="08ec6-285">ValidateDrive</span><span class="sxs-lookup"><span data-stu-id="08ec6-285">ValidateDrive</span></span>                | <span data-ttu-id="08ec6-286">System.object. ValidateDriveAttribute</span><span class="sxs-lookup"><span data-stu-id="08ec6-286">System.Management.Automation.ValidateDriveAttribute</span></span>                 |
|<span data-ttu-id="08ec6-287">ValidateLength</span><span class="sxs-lookup"><span data-stu-id="08ec6-287">ValidateLength</span></span>               | <span data-ttu-id="08ec6-288">ValidateLengthAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-288">System.Management.Automation.ValidateLengthAttribute</span></span>                |
|<span data-ttu-id="08ec6-289">ValidateNotNull</span><span class="sxs-lookup"><span data-stu-id="08ec6-289">ValidateNotNull</span></span>              | <span data-ttu-id="08ec6-290">ValidateNotNullAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-290">System.Management.Automation.ValidateNotNullAttribute</span></span>               |
|<span data-ttu-id="08ec6-291">ValidateNotNullOrEmpty</span><span class="sxs-lookup"><span data-stu-id="08ec6-291">ValidateNotNullOrEmpty</span></span>       | <span data-ttu-id="08ec6-292">ValidateNotNullOrEmptyAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-292">System.Management.Automation.ValidateNotNullOrEmptyAttribute</span></span>        |
|<span data-ttu-id="08ec6-293">ValidatePattern</span><span class="sxs-lookup"><span data-stu-id="08ec6-293">ValidatePattern</span></span>              | <span data-ttu-id="08ec6-294">ValidatePatternAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-294">System.Management.Automation.ValidatePatternAttribute</span></span>               |
|<span data-ttu-id="08ec6-295">ValidateRange</span><span class="sxs-lookup"><span data-stu-id="08ec6-295">ValidateRange</span></span>                | <span data-ttu-id="08ec6-296">ValidateRangeAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-296">System.Management.Automation.ValidateRangeAttribute</span></span>                 |
|<span data-ttu-id="08ec6-297">ValidateScript</span><span class="sxs-lookup"><span data-stu-id="08ec6-297">ValidateScript</span></span>               | <span data-ttu-id="08ec6-298">ValidateScriptAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-298">System.Management.Automation.ValidateScriptAttribute</span></span>                |
|<span data-ttu-id="08ec6-299">ValidateSet</span><span class="sxs-lookup"><span data-stu-id="08ec6-299">ValidateSet</span></span>                  | <span data-ttu-id="08ec6-300">ValidateSetAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-300">System.Management.Automation.ValidateSetAttribute</span></span>                   |
|<span data-ttu-id="08ec6-301">ValidateTrustedData</span><span class="sxs-lookup"><span data-stu-id="08ec6-301">ValidateTrustedData</span></span>          | <span data-ttu-id="08ec6-302">ValidateTrustedDataAttribute.</span><span class="sxs-lookup"><span data-stu-id="08ec6-302">System.Management.Automation.ValidateTrustedDataAttribute</span></span>           |
|<span data-ttu-id="08ec6-303">ValidateUserDrive</span><span class="sxs-lookup"><span data-stu-id="08ec6-303">ValidateUserDrive</span></span>            | <span data-ttu-id="08ec6-304">System.web. Validateuser드라이브 특성</span><span class="sxs-lookup"><span data-stu-id="08ec6-304">System.Management.Automation.ValidateUserDriveAttribute</span></span>             |
|<span data-ttu-id="08ec6-305">버전</span><span class="sxs-lookup"><span data-stu-id="08ec6-305">version</span></span>                      | <span data-ttu-id="08ec6-306">System.Version</span><span class="sxs-lookup"><span data-stu-id="08ec6-306">System.Version</span></span>                                                      |
|<span data-ttu-id="08ec6-307">void</span><span class="sxs-lookup"><span data-stu-id="08ec6-307">void</span></span>                         | <span data-ttu-id="08ec6-308">System.Void</span><span class="sxs-lookup"><span data-stu-id="08ec6-308">System.Void</span></span>                                                         |
|<span data-ttu-id="08ec6-309">WildcardPattern</span><span class="sxs-lookup"><span data-stu-id="08ec6-309">WildcardPattern</span></span>              | <span data-ttu-id="08ec6-310">WildcardPattern.</span><span class="sxs-lookup"><span data-stu-id="08ec6-310">System.Management.Automation.WildcardPattern</span></span>                        |
|<span data-ttu-id="08ec6-311">wim</span><span class="sxs-lookup"><span data-stu-id="08ec6-311">wmi</span></span>                          | <span data-ttu-id="08ec6-312">System.object 개체</span><span class="sxs-lookup"><span data-stu-id="08ec6-312">System.Management.ManagementObject</span></span>                                  |
|<span data-ttu-id="08ec6-313">wmiclass</span><span class="sxs-lookup"><span data-stu-id="08ec6-313">wmiclass</span></span>                     | <span data-ttu-id="08ec6-314">System.object 클래스</span><span class="sxs-lookup"><span data-stu-id="08ec6-314">System.Management.ManagementClass</span></span>                                   |
|<span data-ttu-id="08ec6-315">wmisearcher</span><span class="sxs-lookup"><span data-stu-id="08ec6-315">wmisearcher</span></span>                  | <span data-ttu-id="08ec6-316">시스템 관리. ManagementObjectSearcher</span><span class="sxs-lookup"><span data-stu-id="08ec6-316">System.Management.ManagementObjectSearcher</span></span>                          |
|<span data-ttu-id="08ec6-317">System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="08ec6-317">X500DistinguishedName</span></span>        | <span data-ttu-id="08ec6-318">System.security.cryptography.x509certificates.x509certificate2. System.security.cryptography.x509certificates.x500distinguishedname</span><span class="sxs-lookup"><span data-stu-id="08ec6-318">System.Security.Cryptography.X509Certificates.X500DistinguishedName</span></span> |
|<span data-ttu-id="08ec6-319">X509Certificate</span><span class="sxs-lookup"><span data-stu-id="08ec6-319">X509Certificate</span></span>              | <span data-ttu-id="08ec6-320">System.security.cryptography.x509certificates.x509certificate2입니다.</span><span class="sxs-lookup"><span data-stu-id="08ec6-320">System.Security.Cryptography.X509Certificates.X509Certificate</span></span>       |
|<span data-ttu-id="08ec6-321">Xml</span><span class="sxs-lookup"><span data-stu-id="08ec6-321">xml</span></span>                          | <span data-ttu-id="08ec6-322">System.Xml.XmlDocument</span><span class="sxs-lookup"><span data-stu-id="08ec6-322">System.Xml.XmlDocument</span></span>                                              |
